# snowflake-cybersyn-demo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yaml
snowflake_cybersyn_demo/: local_launcher.py
snowflake_cybersyn_demo/additional_services/: human_in_the_loop.py
snowflake_cybersyn_demo/agent_services/: __init__.py  funny_agent.py
snowflake_cybersyn_demo/agent_services/financial_and_economic_essentials/: goods_getter_agent.py  time_series_getter_agent.py  time_series_processer_agent.py
snowflake_cybersyn_demo/agent_services/government_essentials/: stats_fulfiller_agent.py  stats_getter_agent.py
snowflake_cybersyn_demo/apps/: async_list.py  controller.py  final_task_consumer.py  streamlit.py
snowflake_cybersyn_demo/core_services/: control_plane.py  message_queue.py
snowflake_cybersyn_demo/deployment/: control_plane.py
snowflake_cybersyn_demo/frontend/: controller.py  streamlit.py
snowflake_cybersyn_demo/workflows/: _db.py  financial_and_economic_essentials.py  government_essentials.py  human_input.py  sql_queries.py
