[tool.poetry]
name = "snowflake-cybersyn-demo"
version = "0.1.0"
description = ""
authors = ["Andrei Fajardo <andrei@llamaindex.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
llama-index-core = "^0.10.57"
llama-index-llms-openai = "^0.1.27"
llama-index-agent-openai = "^0.2.9"
streamlit = "^1.36.0"
llama-agents = {version = "^0.0.12", extras = ["kafka"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
